--- a/styles/style.css
+++ b/styles/style.css
@@ -28,10 +28,12 @@ body {
 .content-link {
     color: rgb(238, 175, 59);
     font-size: 1.5rem;
+    transition: transform 0.4s;
 }
 
 .content-link:hover {
     color: azure;
+    transform: scale(1.2);
 }
 
 .main {
